[refactor] - Movie Metadata Fetch APIs Improved